crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__cons_with_empty_list.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: "Code:\n\nhead :: []"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Cons {
        head: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Var(
                "head",
            ),
        },
        tail: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 9,
                },
                end: Position {
                    line: 1,
                    column: 11,
                },
            },
            value: List(
                [],
            ),
        },
    },
}
