crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__error_sql_word_in_query.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: select
---
SqlKeyword(
    Select,
    1,
    1,
)
