crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__error_wildcard_not_var.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: _foo
---
WildcardNotVar(
    "_foo",
    4,
    1,
    1,
)
